Pull SDK .jar from correct directory
The sample app's SDK is outdated and not being kept up to date

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,17 @@ task copyAndCloneTask () {
     }
 
     copy {
-        from '../adobe/samples/Android/ADBMobileSamples/libs/'
+        from('../adobe/samples/Android/ADBMobileSamples/libs/') {
+          include '**/adobeMobileScene*.jar'
+        }
+        from '../sdk/Android/AdobeMobileLibrary/libs/' {
+          include '**/adobeMobileLibrary*.jar'
+        }
+        into '../app/libs/'
+    }
+    
+    copy {
+        
         into '../app/libs/'
     }
 
